# sociallty-react

./: .gitattributes  .gitignore
backend/: .dockerignore  .gitattributes  Dockerfile  Dockerfile.dev  Procfile  backup.py  docker-compose.yaml  entrypoint.sh  locustfile.py  manage.py  pyproject.toml  requirements.txt  testable_content.py
backend/.choreo/: component.yaml
backend/APIs/: AI.py  admin.py  models.py  serializers.py  support.json  tasks.py  tests.py  urls.py  views.py
backend/APIs/migrations/: 0001_initial.py
backend/chat/: admin.py  consumers.py  middlewares.py  models.py  routes.py  tests.py  urls.py  views.py
backend/chat/migrations/: 0001_initial.py  0002_messagereact.py  0003_rename_userchannel_onlineuser.py  0004_rename_reacted_at_messagereact_created_at.py  0005_remove_notification_message_notification_content_and_more.py  0006_notification_from_user_alter_notification_to_user.py  0007_message_replied_to.py
backend/main_page/: admin.py  models.py  signals.py  tasks.py  tests.py  urls.py  views.py
backend/main_page/migrations/: 0001_initial.py  0002_alter_post_user.py  0003_post_view.py  0004_rename_view_post_visiblety.py  0005_rename_visiblety_post_visibility.py  0006_alter_comment_post.py  (+18 more)
backend/sociallty/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/templates/: 404.html  change-user-password.html  edit-user-profile.html  forget-password-mail.html  forget-password.html  settings.html  support.html
backend/users/: admin.py  models.py  signals.py  tests.py  urls.py  views.py
backend/utils/: dtypes.py  main_utils.py
(+107 files in other folders)
