[project]
name = "backend"
version = "2.0.1"
description = "Backend for sociallity website"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django-phonenumber-field==8.0.0",
    "django-unfold==0.40.0",
    "django==5.1.2",
    "djangorestframework-simplejwt>=5.4.0",
    "djangorestframework==3.15.2",
    "gtts==2.5.3",
    "phonenumbers==9.0.0",
    "pillow==11.0.0",
    "python-dotenv==1.0.1",
    "whitenoise==6.7.0",
    "moviepy>=1.0.3",
    "django-cors-headers>=4.6.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar==4.4.6",
    "django-extensions==3.2.3",
    "django-seed==0.3.1",
    "faker>=30.6.0",
]
production = [
    "django-cloudinary-storage[video]>=0.3.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
]
